--- a/app/design/adminhtml/default/default/template/magemash/adminproductgrid/grid/edit/fields/type/select.phtml
+++ b/app/design/adminhtml/default/default/template/magemash/adminproductgrid/grid/edit/fields/type/select.phtml
@@ -2,7 +2,7 @@
 <script type="text/javascript">
 //<![CDATA[
 OptionTemplate<?php echo $this->getType();?> = '<table class="border" cellpadding="0" cellspacing="0">'+
-        '<select name="grid[fields][{{field_id}}][field]">' +
+        '<select name="fields[{{field_id}}][field]">' +
             <?php foreach ($options as $option) { ?>
             '<option value="<?php echo $option['value'];?>"><?php echo $option['label'];?></option>'+
             <?php } ?>
