--- a/app/design/adminhtml/default/default/template/magemash/adminproductgrid/grid/edit/fields/field.phtml
+++ b/app/design/adminhtml/default/default/template/magemash/adminproductgrid/grid/edit/fields/field.phtml
@@ -28,8 +28,8 @@
 
 <script type="text/javascript">
 //<![CDATA[
-var firstStepTemplate = '<div class="option-box" id="option_{{id}}">'+
-            '<table id="<?php echo $this->getFieldId() ?>_{{id}}" class="option-header" cellpadding="0" cellspacing="0">'+
+var firstStepTemplate = '<div class="option-box" id="fields_{{id}}">'+
+            '<table id="table_<?php echo $this->getFieldId() ?>_{{id}}" class="option-header" cellpadding="0" cellspacing="0">'+
             '<input type="hidden" id="<?php echo $this->getFieldId() ?>_{{id}}_is_delete" name="<?php echo $this->getFieldName() ?>[{{id}}][is_delete]" value="" />'+
             '<input type="hidden" id="<?php echo $this->getFieldId() ?>_{{id}}_previous_type" name="<?php echo $this->getFieldName() ?>[{{id}}][previous_type]" value="{{type}}" />'+
             '<input type="hidden" id="<?php echo $this->getFieldId() ?>_{{id}}_previous_group" name="<?php echo $this->getFieldName() ?>[{{id}}][previous_group]" value="" />'+
@@ -40,6 +40,7 @@ var firstStepTemplate = '<div class="option-box" id="option_{{id}}">'+
             '<thead>'+
                 '<tr>'+
                     '<th class="opt-type"><?php echo Mage::helper('catalog')->__('Table') ?> <span class="required">*</span></th>'+
+                    '<th class="opt-type"><?php echo Mage::helper('catalog')->__('Field') ?> <span class="required">*</span></th>'+
                     '<th class="opt-title"><?php echo Mage::helper('catalog')->__('Header') ?> <span class="required">*</span></th>'+
                     '<th class="opt-title"><?php echo Mage::helper('catalog')->__('Width') ?> <span class="required">*</span></th>'+
                     '<th class="opt-title"><?php echo Mage::helper('catalog')->__('Options') ?> <span class="required">*</span></th>'+
@@ -49,6 +50,7 @@ var firstStepTemplate = '<div class="option-box" id="option_{{id}}">'+
             '</thead>'+
             '<tr>'+
                 '<td><?php echo $this->getTableSelectHtml() ?></td>'+
+                '<td><?php echo $this->getFieldSelectHtml() ?></td>'+
                 '<td><input type="text" class="required-entry input-text" id="<?php echo $this->getFieldId() ?>_{{id}}_header" name="<?php echo $this->getFieldName() ?>[{{id}}][header]" value="{{header}}">{{checkboxScopeTitle}}</td>'+
                 '<td><input type="text" class="required-entry input-text" id="<?php echo $this->getFieldId() ?>_{{id}}_width" name="<?php echo $this->getFieldName() ?>[{{id}}][width]" value="{{width}}">{{checkboxScopeTitle}}</td>'+
                 '<td><input type="text" class="required-entry input-text" id="<?php echo $this->getFieldId() ?>_{{id}}_options" name="<?php echo $this->getFieldName() ?>[{{id}}][options]" value="{{options}}">{{checkboxScopeTitle}}</td>'+
@@ -69,9 +71,15 @@ var productOption = {
             data.id  = this.itemCount;
             data.type = '';
             data.field_id = this.itemCount;
+            data.table_name = "product";
+            data.sort_order = "";
+            data.width = "";
+            data.options = "";
         } else {
-            this.itemCount = data.item_count;
+//            this.itemCount = data.item_count;
         }
+
+        console.log(data);
 
         Element.insert(this.div, {'after':this.template.evaluate(data)});
 
@@ -82,20 +90,6 @@ var productOption = {
             });
         }
 
-        //set selected is_require
-//        if (data.is_require) {
-//            $A($('<?php //echo $this->getFieldId() ?>//_'+data.id+'_is_require').options).each(function(option){
-//                if (option.value==data.is_require) option.selected = true;
-//            });
-//        }
-
-//        if (data.checkboxScopeTitle) {
-//            set disabled
-//            if ($('<?php //echo $this->getFieldId() ?>//_'+data.field_id+'_title') && data.scopeTitleDisabled) {
-//                $('<?php //echo $this->getFieldId() ?>//_'+data.field_id+'_title').disable();
-//            }
-//        }
-
         this.itemCount++;
         this.bindRemoveButtons();
         productOptionType.bindSelectInputType();
@@ -103,7 +97,7 @@ var productOption = {
     remove : function(event){
         var element = $(Event.findElement(event, 'div'));
         if(element){
-            $('product_'+element.readAttribute('id')+'_'+'is_delete').value = '1';
+            $(element.readAttribute('id')+'_'+'is_delete').value = '1';
             element.addClassName('no-display');
             element.addClassName('ignore-validate');
             element.hide();
@@ -137,9 +131,6 @@ var productOptionType = {
     loadStepTwo : function(event){
         var element = $(Event.findElement(event, 'select'));
 
-        var group = '';
-        var previousGroupElm = $(element.readAttribute('id').sub('_table_name', '_previous_group'));
-
         switch(element.getValue()){
             case 'product':
                 template = OptionTemplateproduct;
@@ -159,23 +150,16 @@ var productOptionType = {
                 break;
         }
 
-            if ($(element.readAttribute('id')+'_'+group)) {
-                document.getElementById(element.readAttribute('id')+'_'+group).remove();
-            }
-                template = '<div id="'+element.readAttribute('id')+'_'+group+'" class="grid tier form-list">'+template+'</div>';
-                this.secondTemplate = new Template(template, this.templateSyntax);
+        this.secondTemplate = new Template(template, this.templateSyntax);
 
-                data = {};
-                if (!data.field_id) {
-                    data = {};
-                    data.field_id = $(element.readAttribute('id').sub('_table_name', '_id')).getValue();
-                }
+        $(element.readAttribute('id').sub('table_name', 'field')).innerHTML = this.secondTemplate.evaluate();
 
-                Element.insert(element.readAttribute('id').sub('_table_name', ''), {'after':this.secondTemplate.evaluate(data)});
     },
     addDataToValues : function(data){
 
-        switch(data.table){
+//        var element = $(Event.findElement(event, 'select'));
+
+        switch(data.table_name){
             case 'product':
                 template = OptionTemplateproduct;
                 group = 'field';
@@ -193,65 +177,15 @@ var productOptionType = {
                 group = 'unknown';
                 break;
         }
-//        switch(data.type){
-//            case 'field':
-//            case 'area':
-//                template = OptionTemplateText;
-//                group = 'text';
-//                break;
-//            case 'file':
-//                template = OptionTemplateFile;
-//                group = 'file';
-//                break;
-//            case 'drop_down':
-//            case 'radio':
-//            case 'checkbox':
-//            case 'multiple':
-//                template = OptionTemplateSelect;
-//                group = 'select';
-//                break;
-//            case 'date':
-//            case 'date_time':
-//            case 'time':
-//                template = OptionTemplateDate;
-//                group = 'date';
-//                break;
-//        }
-
-//        $('<?php //echo $this->getFieldId() ?>//_'+data.id+'_previous_group').value = group;
-
-        template = '<div id="<?php echo $this->getFieldId() ?>_{{id}}_table_name_'+group+'" class="grid tier form-list">'+template+'</div>';
 
         this.secondTemplate = new Template(template, this.templateSyntax);
 
-        Element.insert($('<?php echo $this->getFieldId() ?>_'+data.field_id), {'after':this.secondTemplate.evaluate(data)});
-
-//        if (data.checkboxScopePrice) {
-            //set disabled
-//            if ($('<?php //echo $this->getFieldId() ?>//_'+data.option_id+'_price') && data.scopePriceDisabled) {
-//                $('<?php //echo $this->getFieldId() ?>//_'+data.option_id+'_price').disable();
-//                $('<?php //echo $this->getFieldId() ?>//_'+data.option_id+'_price_type').disable();
-//            }
-//        }
-
-//        switch(data.type){
-//            case 'drop_down':
-//            case 'radio':
-//            case 'checkbox':
-//            case 'multiple':
-//                data.optionValues.each(function(value) {
-//                    selectOptionType.add(value);
-//                });
-//                selectOptionType.bindAddButton();
-//                break;
-//        }
-
-//        if (data.price_type) {
-//            $A($('<?php //echo $this->getFieldId() ?>//_'+data.option_id+'_price_type').options).each(function(option){
-//                if (option.value==data.price_type) option.selected = true;
-//            });
-//        }
-
+        $('fields_'+data.field_id+'_field').innerHTML = this.secondTemplate.evaluate();
+//        template = '<div id="<?php //echo $this->getFieldId() ?>//_{{id}}_table_name_'+group+'" class="grid tier form-list">'+template+'</div>';
+//
+//        this.secondTemplate = new Template(template, this.templateSyntax);
+//
+//        Element.insert($('<?php //echo $this->getFieldId() ?>//_'+data.field_id), {'after':this.secondTemplate.evaluate(data)});
     },
     bindSelectInputType : function(){
         var types = $$('.select-grid-field-type');
@@ -268,20 +202,20 @@ var productOptionType = {
 
 var productOptionScope = {
     addScope : function(event){
-        var element = $(Event.element(event));
-        fieldToDisable = $(element.readAttribute('id').sub('_use_default', ''));
-
-        if (fieldToDisable.disabled) {
-            if (fieldToDisable.hasClassName('product-option-price')) {//need change to cheking value of element
-                $(fieldToDisable.readAttribute('id')+'_type').enable();
-            }
-            fieldToDisable.enable();
-        } else {
-            if (fieldToDisable.hasClassName('product-option-price')) {//need change to cheking value of element
-                $(fieldToDisable.readAttribute('id')+'_type').disable();
-            }
-            fieldToDisable.disable();
-        }
+//        var element = $(Event.element(event));
+//        fieldToDisable = $(element.readAttribute('id').sub('_use_default', ''));
+//
+//        if (fieldToDisable.disabled) {
+//            if (fieldToDisable.hasClassName('product-option-price')) {//need change to cheking value of element
+//                $(fieldToDisable.readAttribute('id')+'_type').enable();
+//            }
+//            fieldToDisable.enable();
+//        } else {
+//            if (fieldToDisable.hasClassName('product-option-price')) {//need change to cheking value of element
+//                $(fieldToDisable.readAttribute('id')+'_type').disable();
+//            }
+//            fieldToDisable.disable();
+//        }
     },
     bindScopeCheckbox : function(){
         var checkboxes = $$('.product-option-scope-checkbox');
