--- a/app/design/adminhtml/default/default/template/magemash/adminproductgrid/grid/edit/fields/type/select.phtml
+++ b/app/design/adminhtml/default/default/template/magemash/adminproductgrid/grid/edit/fields/type/select.phtml
@@ -1,13 +1,10 @@
 <?php $options = $this->getSelectOptions();?>
 <script type="text/javascript">
 //<![CDATA[
-OptionTemplate<?php echo $this->getType();?> = '<table class="border" cellpadding="0" cellspacing="0">'+
-        '<select name="fields[{{field_id}}][field]">' +
+OptionTemplate<?php echo $this->getType();?> =
             <?php foreach ($options as $option) { ?>
             '<option value="<?php echo $option['value'];?>"><?php echo $option['label'];?></option>'+
-            <?php } ?>
-        '</select>'+
-        '</table>';
+            <?php } ?>'';
 
 //]]>
 </script>
