updated grid view

--- a/app/design/adminhtml/default/default/layout/magemash_adminproductgrid.xml
+++ b/app/design/adminhtml/default/default/layout/magemash_adminproductgrid.xml
@@ -11,6 +11,12 @@
         </reference>
     </adminproductgrid_adminhtml_grid_index>
 
+    <adminproductgrid_adminhtml_view_index>
+        <reference name="content">
+            <block type="adminproductgrid/adminhtml_view" name="gridAdmin" />
+        </reference>
+    </adminproductgrid_adminhtml_view_index>
+
     <adminproductgrid_adminhtml_grid_new>
         <update handle="adminproductgrid_adminhtml_grid_edit" />
     </adminproductgrid_adminhtml_grid_new>
