--- a/app/design/adminhtml/default/default/layout/magemash_adminproductgrid.xml
+++ b/app/design/adminhtml/default/default/layout/magemash_adminproductgrid.xml
@@ -22,7 +22,7 @@
     </adminproductgrid_adminhtml_grid_new>
 
     <adminproductgrid_adminhtml_grid_edit>
-        <update handle="editor"/>
+        <!--<update handle="editor"/>-->
         <reference name="content">
             <block type="adminproductgrid/adminhtml_grid_edit" name="grid_edit"></block>
         </reference>
